--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
       <a href="#" class="logo"><img src="img/wildbeast.svg" alt="Wildbeast"></a>
       <nav>
         <ul>
-          <li><a href="#">sobre</a></li>
-          <li><a href="#">animais</a></li>
-          <li><a href="#">contato</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">animals</a></li>
+          <li><a href="#">contact</a></li>
         </ul>
       </nav>
     </header>
 
     <nav class="sidenav">
       <ul>
-        <li><a href="#"><img src="img/icones/cervo.svg" alt="Cervo"></a></li>
-        <li><a href="#"><img src="img/icones/leao.svg" alt="Leão"></a></li>
-        <li><a href="#"><img src="img/icones/gato.svg" alt="Gato"></a></li>
-        <li><a href="#"><img src="img/icones/vaca.svg" alt="Vaca"></a></li>
-        <li><a href="#"><img src="img/icones/ovelha.svg" alt="Ovelha"></a></li>
-        <li><a href="#"><img src="img/icones/abelha.svg" alt="Abelha"></a></li>
+        <li><a href="#"><img src="img/icones/cervo.svg" alt="Deer"></a></li>
+        <li><a href="#"><img src="img/icones/leao.svg" alt="Lion"></a></li>
+        <li><a href="#"><img src="img/icones/gato.svg" alt="Cat"></a></li>
+        <li><a href="#"><img src="img/icones/vaca.svg" alt="Cow"></a></li>
+        <li><a href="#"><img src="img/icones/ovelha.svg" alt="Sheep"></a></li>
+        <li><a href="#"><img src="img/icones/abelha.svg" alt="Bee"></a></li>
       </ul>
     </nav>
 
     <main class="content">
       <div class="titulo">
-        <h1>Lobo Cinza</h1>
-        <span>da família canis lupus</span>
+        <h1>Gray Wolf</h1>
+        <span>of the canis lupus family</span>
       </div>
 
       <div class="caracteristicas">
@@ -51,34 +51,34 @@
         </div>
       </div>
 
-      <p class="col-wide">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
+      <p class="col-wide">It is a survivor of the Ice Age, originating in the Late Pleistocene, around 300,000 years ago.[2] DNA sequencing and genetic studies reaffirm that the gray wolf is an ancestor of the domestic dog.</p>
 
       <img class="imagem-1" src="img/wolf1.jpg" alt="Wolf 1">
 
-      <p class="destaque">É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.</p>
+      <p class="destaque">It is a survivor of the Ice Age, originating from the Late Pleistocene, about 300 thousand years ago.[2] DNA sequencing and studies.</p>
 
       <img class="imagem-2" src="img/wolf2.jpg" alt="Wolf 2">
 
-      <p>O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos ombros, varia de 60 a 95 centímetros.</p>
+      <p>The weight and size of wolves vary greatly throughout the world, tending to increase proportionally with latitude, as predicted by Christian Bergmann's theory. In general, height, measured from the shoulders, varies from 60 to 95 centimeters.</p>
 
-      <p>O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36 kg; os lobos indianos e árabes, 25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.</p>
+      <p>Weight varies geographically. On average, European wolves weigh 38.5 kg (84 lb); North American wolves, 36 kg (70 lb); Indian and Arabian wolves, 25 kg (55 lb).[7] Although rare, wolves weighing over 77 kg (177 lb) have been found in Alaska, Canada,[8] and the former Soviet Union.</p>
 
       <blockquote class="citacao col-wide">
-        <p>“Há algo no uivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente.”</p>
+        <p>“There is something about the howl of the wolf that takes a man out of the here and now and transports him into a forest of the mind.”</p>
       </blockquote>
 
       <ul class="atributos">
-        <li>Surgiu: 12.000 anos</li>
-        <li>Tipo: Mamífero</li>
-        <li>Idade Média: 13 anos</li>
-        <li>Macho adulto: 80kg</li>
-        <li>Fêmea adulta: 55kg</li>
-        <li>Família: Lupus</li>
+        <li>Appeared: 12,000 years ago</li>
+        <li>Type: Mammal</li>
+        <li>Average Age: 13 years</li>
+        <li>Adult male: 80kg</li>
+        <li>Adult female: 55kg</li>
+        <li>Family: Lupus</li>
       </ul>
 
       <div class="informacoes">
-        <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
-        <p>É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.</p>
+        <p>It is a survivor of the Ice Age, originating in the Late Pleistocene, around 300,000 years ago.[2] DNA sequencing and genetic studies reaffirm that the gray wolf is an ancestor of the domestic dog.</p>
+        <p>It is a survivor of the Ice Age, originating in the Late Pleistocene, around 300,000 years ago.[2] DNA sequencing and genetic studies reaffirm that the gray wolf is an ancestor of the domestic dog.</p>
       </div>
 
       <img class="col-wide" src="img/wolf3.jpg" alt="Wolf 3">
@@ -87,16 +87,16 @@
 
     <aside class="anuncios">
       <div class="anuncio-item">
-        <img src="img/anuncio-1.jpg" alt="Anuncio 1">
+        <img src="img/anuncio-1.jpg" alt="Ad 1">
       </div>
 
       <div class="anuncio-item">
-        <img src="img/anuncio-2.jpg" alt="Anuncio 2">
+        <img src="img/anuncio-2.jpg" alt="Ad 2">
       </div>
     </aside>
 
     <footer class="footer">
-      <p>Alguns direitos reservados.</p>
+      <p>© 2025 Wildbeast.</p>
     </footer>
 
   </div>
